tests/lean/red.lean.expected.out
red.lean:9:19: error: type mismatch, expression
  rfl
has type
  ?m_2 = ?m_2
but is expected to have type
  f = g
red.lean:12:0: error: "eliminator" elaborator type mismatch, term
  rfl
has type
  ?m_2 = ?m_2
but is expected to have type
  f a = a
red.lean:17:0: error: "eliminator" elaborator type mismatch, term
  rfl
has type
  ?m_2 = ?m_2
but is expected to have type
  f a = a
